--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,9 +3,9 @@
     font-style: normal;
     font-weight: 400;
     src: local("SourceSerif4"),
-            url(.../fonts/SourceSerif4-Regular.woff2) format("woff2"),
-            url(.../fonts/SourceSerif4-Regular.woff) format("woff"),
-            url(.../fonts/SourceSerif4-Regular.ttf) format("ttf");
+            url(fonts/SourceSerif4-Regular.woff2) format("woff2"),
+            url(fonts/SourceSerif4-Regular.woff) format("woff"),
+            url(fonts/SourceSerif4-Regular.ttf) format("ttf");
 }
 
 @font-face {
@@ -13,7 +13,7 @@
     font-style: normal;
     font-weight: 400;
     src: local("Nunito"),
-            url(.../fonts/Nunito-Regular.woff2) format("woff2"),
-            url(.../fonts/Nunito-Regular.woff) format("woff"),
-            url(.../fonts/Nunito-Regular.ttf) format("ttf");
+            url(fonts/Nunito-Regular.woff2) format("woff2"),
+            url(fonts/Nunito-Regular.woff) format("woff"),
+            url(fonts/Nunito-Regular.ttf) format("ttf");
 }
